--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
+  "bin": {
+    "conflunce-ts-client-mcp": "./dist/index.js"
+  },
   "scripts": {
+    "build": "rimraf dist && tsc",
     "start": "node dist/index.js",
-    "build": "tsc",
-    "dev": "cross-env NODE_OPTIONS=\"--loader=ts-node/esm\" ts-node src/index.ts"
+    "dev": "fastmcp dev src/index.ts",
+    "inspect": "npm run build && fastmcp inspect src/index.ts",
+    "prepare": "npm run build",
+    "lint": "npx eslint src",
+    "lint:fix": "npm run lint -- --fix",
+    "release:patch": "npm version patch",
+    "release:minor": "npm version minor",
+    "release:major": "npm version major"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +24,20 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
-    "dotenv": "^17.2.0"
+    "@eslint/js": "^9.21.0",
+    "@types/node": "^16.18.126",
+    "dotenv": "^17.2.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "fastmcp": "^3.10.0",
+    "typescript-eslint": "^8.36.0",
+    "web-vitals": "^2.1.4",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^24.1.0",
-    "cross-env": "^7.0.3",
+    "@types/lodash": "^4.17.16",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.3.3"
   }
 }
