--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
 # .env file
-CONFLUENCE_DOMAIN=
-CONFLUENCE_USER=
-CONFLUENCE_TOKEN=
+ATLASSIAN_DOMAIN=domain.atlassian.net
+ATLASSIAN_USER=user@test.com
+ATLASSIAN_TOKEN=api_token
